--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,24 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.progress {
+  color: black;
+  position: fixed;
+  margin-left: -20px;
+  margin-top: -20px;
+  top: 50%;
+  left: 50%; 
+}
+
+.progress-background {
+  background-color: black;
+  opacity: .3;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 100000;
+  margin: 0;
+  top: 0;
+  left: 0;
+}
