--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,11 @@
   margin-top: 0px;
 }
 
+.success {
+  color: green;
+  margin-top: 0px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
