--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,21 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+/*I am so, so sorry CSS gods*/
+circle {
   color: white;
 }
+
+svg {
+  color: white !important;
+}
+
+text {
+  fill: #61bac6 !important;
+}
+/*Please forgive me*/
 
 .App-title {
   font-size: 1.5em;
